--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,10 @@
   },
   "require": {
     "php": ">=8.3",
-    "nixphp/framework": "dev-main",
-    "nixphp/database": "dev-main",
-    "nixphp/cli": "dev-main"
+    "ext-pdo": "*",
+    "nixphp/framework": "^0.1.0",
+    "nixphp/database": "^0.1.0",
+    "nixphp/cli": "^0.1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^12.1",
